# flowpower

./: .gitignore  LICENSE  README.md  openai_connection.yaml.example  pyproject.toml  setup.py
src/flowpower/: __init__.py  config.py  logger.py  main.py  test.yaml
src/flowpower/api/: chat_adapter.py  endpoints.py  server.py
src/flowpower/cli/: __init__.py  inspect.py  run.py  stream.py  test_block.py  trace.py
src/flowpower/cli/data/: input.json
src/flowpower/cli/data/standard_flow/: flow.dag.yaml  hello.py
src/flowpower/engine/: executor.py  runner.py  stream_adapter.py  trace_utils.py
src/flowpower/examples/flex-flows/basic/: README.md  flex-flow-quickstart-azure.ipynb  flex-flow-quickstart.ipynb  flow.flex.yaml  llm.py  run.yml
src/flowpower/examples/flex-flows/chat-async-stream/: chat-stream-with-async-flex-flow.ipynb  flow.py
src/flowpower/examples/flex-flows/chat-basic/: chat-with-class-based-flow-azure.ipynb  chat-with-class-based-flow.ipynb  chat.prompty  flow.flex.yaml  flow.py  run.yml
src/flowpower/examples/flex-flows/chat-minimal/: chat.prompty  flow.py  run.yml
src/flowpower/examples/flex-flows/chat-stream/: chat-stream-with-flex-flow.ipynb  chat.prompty  flow.flex.yaml  flow.py
src/flowpower/examples/flex-flows/chat-with-functions/: chat_with_tools.prompty  flow.flex.yaml  flow.py
src/flowpower/examples/flex-flows/eval-checklist/: check_list.py  eval.prompty  init.json
src/flowpower/sdk/: client.py  flow_inspect.py  prompty_registry.py  run_config.py
src/flowpower/utils/: async_wrap.py  env_utils.py  parse_kv.py  trace_logger.py
(+38 files in other folders)
